<resources>
    <string name="app_name">Tributum</string>
    <string name="amount_label">Amount<font color='#f65b94'>*</font></string>
    <string name="first_name_label">First Name<font color='#f65b94'>*</font></string>
    <string name="full_name_label">Full Name<font color='#f65b94'>*</font></string>
    <string name="last_name_label">Last Name<font color='#f65b94'>*</font></string>
    <string name="gross_label">Gross</string>
    <string name="net_label">Net</string>
    <string name="address_label">Address<font color='#f65b94'>*</font></string>
    <string name="address_label_1">Address 1<font color='#f65b94'>*</font></string>
    <string name="address_label_2">Address 2<font color='#f65b94'>*</font></string>
    <string name="address_label_3">Address 3</string>
    <string name="pps_number">PPS number<font color='#f65b94'>*</font></string>
    <string name="mail_label">E-mail<font color='#f65b94'>*</font></string>
    <string name="welcome_back_label">Welcome\nBack</string>
    <string name="payer_label">Payer</string>
    <string name="try_again">Check internet connection and try again. All changes saved.</string>
    <string name="faqs_label">FAQ</string>
    <string name="payment_to_label">Payment To</string>
    <string name="occupation_label">Occupation<font color='#f65b94'>*</font></string>
    <string name="married_label">Married</string>
    <string name="single_label">Single</string>
    <string name="divorced_label">Divorced</string>
    <string name="cohabiting_label">Cohabiting</string>
    <string name="applying_for">What Are You Applying For?<font color='#f65b94'>*</font></string>
    <string name="income_tax_label">Income Tax</string>
    <string name="corporation_tax_label">Corporation Tax</string>
    <string name="value_added_tax_label">Value Added Tax (VAT)</string>
    <string name="employer_paye_label">Employer\'s PAYE (PRSI)</string>
    <string name="relevant_contract_label">Relevant Contract Tax (RCT)</string>
    <string name="self_employed_label">Self employed</string>
    <string name="employee_label">Employee</string>
    <string name="date_of_birth">Date of Birth (DD/MM/YYYY)<font color='#f65b94'>*</font></string>
    <string name="starting_date">Starting Date (DD/MM/YYYY)</string>
    <string name="please_enter_pps">Please enter a correct PPS number</string>
    <string name="please_enter_correct_email">Please enter a correct email address</string>
    <string name="something_went_wrong">Something went wrong. Please try again later</string>
    <string name="pps_label">PPS Number<font color='#f65b94'>*</font></string>
    <string name="site_label">Site location/ID</string>
    <string name="english_label">English</string>
    <string name="romanian_label">Romanian</string>
    <string name="take_photo">Take photo</string>
    <string name="no_photo_taken">You haven\'t taken any photo so far</string>
    <string name="vat_notification_string">Kind reminder to submit your expenses/invoices for the last 2 months.</string>
    <string name="vats_action">Get started</string>
    <string name="email_label">Email<font color='#f65b94'>*</font></string>
    <string name="receipts_months">Receipts period (months)</string>
    <string name="starting_month_label">Starting month<font color='#f65b94'>*</font></string>
    <string name="ending_month_label">Ending month<font color='#f65b94'>*</font></string>
    <string name="month_label">Month<font color='#f65b94'>*</font></string>
    <string name="you_receive_copy">You will receive an email regarding this payment</string>
    <string name="you_receive_copy_salary">You will receive an email regarding this salary</string>
    <string name="invoices_message_email">Please add the receipts/invoices for\u0020</string>
    <string name="pps_message_email">New PPS for\u0020</string>
    <string name="invoices_message_email_part2">\u0020for period:\u0020</string>
    <string name="add_pps_front">Add PPS Front Image<font color='#f65b94'>*</font></string>
    <string name="add_pps_back">Add PPS Back Image (optional)</string>
    <string name="add_pps_back_mandatory">Add PPS Back Image<font color='#f65b94'>*</font></string>
    <string name="add_from_gallery">Add From Gallery</string>
    <string name="phone_number_label">Phone number<font color='#f65b94'>*</font></string>
    <string name="contract_mail_message">Your request was received and it will be processed in the shortest time.</string>
    <string name="welcome_tributum_label">Welcome to Tributum!</string>
    <string name="please_enter_birthday_format">Please enter birthday like DD/MM/YYYY</string>
    <string name="iban_label">Bank IBAN</string>
    <string name="number_kids">Nr of children</string>
    <string name="add_marriage_record">Add Your Marriage Certificate<font color='#f65b94'>*</font></string>
    <string name="what_do_you_want">What do you want\nto do today?</string>
    <string name="new_contract">New Client</string>
    <string name="rct_payment_label">RCT Payment</string>
    <string name="add_vat_label">Add VAT</string>
    <string name="app_language_label">App\nLanguage</string>
    <string name="choose_language">Choose Your Preferred Language</string>
    <string name="done_label">Done</string>
    <string name="add_vat_receipts">Add VAT\nReceipts</string>
    <string name="vat_subtitle">These invoices/receipts must be sent regularly. You can contact us to find out how regularly. Also, you will receive a notification every 2 months to remind you of this process.</string>
    <string name="add_receipts">Add Receipts<font color='#f65b94'>*</font></string>
    <string name="send_vat_receipts">Send VAT Receipts</string>
    <string name="remove_photo">Remove photo</string>
    <string name="send_payment_label">Send Payment</string>
    <string name="add_new_label">Add New</string>
    <string name="remove_label">Remove</string>
    <string name="personal_info_label">Personal\nInfo</string>
    <string name="contract_subtitle">Please carefully enter your information,\nso we can generate a contract for you.</string>
    <string name="add_your_id_label">Add Your ID/Passport/Driver license<font color='#f65b94'>*</font></string>
    <string name="add_your_id_without_driving_label">Add Your ID/Passport<font color='#f65b94'>*</font></string>
    <string name="add_your_letter_label">Add Your Letter Of Employed<font color='#f65b94'>*</font></string>
    <string name="add_your_bill_label">Add a Bill (gas/electricity/bank)<font color='#f65b94'>*</font></string>
    <string name="marital_status_label">Marital Status</string>
    <string name="any_children_label">Any Children?</string>
    <string name="continue_label">Continue</string>
    <string name="employment_info_label">Employment\nInfo</string>
    <string name="almost_done">Almost Done</string>
    <string name="clear_label">Clear</string>
    <string name="add_your_signature_below">Add Your Signature Below<font color='#f65b94'>*</font></string>
    <string name="sign_send"><![CDATA[Sign & Send]]></string>
    <string name="vat_receipts_sent">VAT Receipts\nSent</string>
    <string name="ok_label">Ok</string>
    <string name="payment_sent_label">Payment\nSent</string>
    <string name="contract_sent_label">Contract\nSent</string>
    <string name="frequently_label">Frequently\nAsked\nQuestions</string>
    <string name="faq_subtitle">Everything You Need to Know</string>
    <string name="terms_conditions_label"><![CDATA[Terms &\nConditions]]></string>
    <string name="eircode_label">Eircode</string>
    <string name="mom_name_label">Mom\'s name before marriage<font color='#f65b94'>*</font></string>
    <string name="not_older_then_label">Not older then 2 months</string>
    <string name="basic_hours_label">Basic Hours</string>
    <string name="overtime_label">Overtime</string>
    <string name="subsistence_label">Subsistence/Bonus</string>
    <string name="bank_holiday_label">Bank Holiday</string>
    <string name="holiday_label">Holiday</string>
    <string name="salary_rate_label">Gross rate per Hour</string>
    <string name="weekly_label">Weekly</string>
    <string name="monthly_label">Monthly</string>
    <string name="fortnightly_label">Fortnightly</string>
    <string name="phone_label">Phone<font color='#f65b94'>*</font></string>
    <string name="sur_name_label">Surname<font color='#f65b94'>*</font></string>
    <string name="company_name_label">Company Name (If you are business entity)<font color='#f65b94'>*</font></string>
    <string name="proposed_name_label">Proposed Company Name<font color='#f65b94'>*</font></string>
    <string name="street_address_label">Street Address<font color='#f65b94'>*</font></string>
    <string name="town_city_label">Town/City<font color='#f65b94'>*</font></string>
    <string name="country_label">Country<font color='#f65b94'>*</font></string>
    <string name="company_activities_label">Company Activities<font color='#f65b94'>*</font></string>
    <string name="we_can_provide">We can provide you with a Registered Office Address or you can provide your own address</string>
    <string name="registered_label">Registered Office Address<font color='#f65b94'>*</font></string>
    <string name="director_name_label">Director First Name<font color='#f65b94'>*</font></string>
    <string name="director_sur_name_label">Director Surname<font color='#f65b94'>*</font></string>
    <string name="director_pps_label">Director PPS Number<font color='#f65b94'>*</font></string>
    <string name="director_nationality_label">Director Nationality<font color='#f65b94'>*</font></string>
    <string name="director_occupation_label">Director Occupation<font color='#f65b94'>*</font></string>
    <string name="director_home_address_label">Director Home Address<font color='#f65b94'>*</font></string>
    <string name="director_other_directorships_label">Other Directorships (if any)</string>
    <string name="director_other_company_label">Other Company\'s Registration Number</string>
    <string name="company_secretary_label">Company Secretary<font color='#f65b94'>*</font></string>
    <string name="secretary_name_label">Company Secretary First Name<font color='#f65b94'>*</font></string>
    <string name="secretary_sur_name_label">Company Secretary Sur Name<font color='#f65b94'>*</font></string>
    <string name="secretary_nationality_label">Company Secretary Nationality<font color='#f65b94'>*</font></string>
    <string name="secretary_home_address_label">Company Secretary Home Address<font color='#f65b94'>*</font></string>
    <string name="secretary_email_label">Company Secretary email<font color='#f65b94'>*</font></string>
    <string name="secretary_pps_label">Company Secretary PPS Number<font color='#f65b94'>*</font></string>
    <string name="add_id_label">Add your ID<font color='#f65b94'>*</font></string>
    <string name="passport_label">Add a selfie holding your passport<font color='#f65b94'>*</font></string>
</resources>