<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_1"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:ignore="Autofill">

    <EditText
        android:id="@+id/director_first_name_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:hint="@string/director_name_label"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/director_sur_name_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:hint="@string/director_sur_name_label"
        android:inputType="textCapWords" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_rectangle_corners">

        <EditText
            android:id="@+id/director_birthday_id"
            style="@style/CustomEditText"
            android:layout_marginStart="44dp"
            android:hint="@string/date_of_birth"
            android:inputType="date" />

        <ImageView
            android:id="@+id/director_image_id"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_icon_date" />
    </RelativeLayout>

    <EditText
        android:id="@+id/director_pps_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/director_pps_label"
        android:inputType="textCapWords" />

    <TextView
        style="@style/MostUsedText"
        android:text="@string/add_pps_front" />

    <include
        android:id="@+id/director_pps_front"
        layout="@layout/company_item" />

    <TextView
        style="@style/MostUsedText"
        android:text="@string/add_pps_back_mandatory" />

    <include
        android:id="@+id/director_pps_back"
        layout="@layout/company_item" />

    <TextView
        style="@style/MostUsedText"
        android:text="@string/add_id_label" />

    <include
        android:id="@+id/director_id"
        layout="@layout/company_item" />

    <TextView
        style="@style/MostUsedText"
        android:text="@string/passport_label" />

    <include
        android:id="@+id/director_pass"
        layout="@layout/company_item" />

    <EditText
        android:id="@+id/director_nationality_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/director_nationality_label"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/director_occupation_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/director_occupation_label"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/director_home_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/director_home_address_label"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/director_other_directorships_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/director_other_directorships_label"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/director_other_company_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/director_other_company_label"
        android:inputType="textCapWords" />
</LinearLayout>