<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_1"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:ignore="Autofill">

    <TextView
        style="@style/MostUsedText"
        android:text="@string/company_secretary_label" />

    <EditText
        android:id="@+id/secretary_first_name_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:hint="@string/secretary_name_label"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/secretary_sur_name_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:hint="@string/secretary_sur_name_label"
        android:inputType="textCapWords" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_rectangle_corners">

        <EditText
            android:id="@+id/secretary_birthday_id"
            style="@style/CustomEditText"
            android:layout_marginStart="44dp"
            android:hint="@string/date_of_birth"
            android:inputType="date" />

        <ImageView
            android:id="@+id/secretary_image_id"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_icon_date" />
    </RelativeLayout>

    <EditText
        android:id="@+id/secretary_email_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/secretary_email_label"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/secretary_pps_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/secretary_pps_label"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/secretary_nationality_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/secretary_nationality_label"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/secretary_home_edit_text"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/secretary_home_address_label"
        android:inputType="textCapWords" />
</LinearLayout>