<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:id="@+id/weekly_layout_id"
        style="@style/CalendarDayLayout">

        <TextView
            style="@style/CalendarDayTitle"
            android:layout_marginBottom="10dp"
            android:text="@string/weekly_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/monthly_layout_id"
        style="@style/CalendarDayLayout">

        <TextView
            style="@style/CalendarDayTitle"
            android:layout_marginBottom="10dp"
            android:text="@string/monthly_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fortnightly_layout_id"
        style="@style/CalendarDayLayout">

        <TextView
            style="@style/CalendarDayTitle"
            android:layout_marginBottom="10dp"
            android:text="@string/fortnightly_label" />
    </LinearLayout>
</LinearLayout>